--- a/Filip Tojic/index.html
+++ b/Filip Tojic/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Filip Tojic</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Senior Full Stack Developer
+      <h2>I'm a passionate <span> Full Stack Developer
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -116,9 +116,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Vue <i class="val">90%</i></span>
+            <span class="skill">Vue <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -134,23 +134,23 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Node.js <i class="val">80%</i></span>
+            <span class="skill">Node.js <i class="val">98%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Laravel <i class="val">90%</i></span>
+            <span class="skill">Laravel <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">HTML/CSS <i class="val">90%</i></span>
+            <span class="skill">HTML/CSS <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
