--- a/Filip Tojic/index.html
+++ b/Filip Tojic/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> email@example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>tojicfilip@gmail.com</li>
               </ul>
             </div>
           </div>
@@ -456,7 +456,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>email@example.com</p>
+            <p>tojicfilip@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
