--- a/Filip Tojic/index.html
+++ b/Filip Tojic/index.html
@@ -447,7 +447,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>LinkedIn Profile</h3>
             <div class="social-links">
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i>https://www.linkedin.com/in/filip-tojic</a>
+              <a href="https://www.linkedin.com/in/filip-tojic" class="linkedin"><i class="icofont-linkedin"></i>https://www.linkedin.com/in/filip-tojic</a>
             </div>
           </div>
         </div>
